updated secret recovery

--- a/.github/workflows/util_recover_secrets.yml
+++ b/.github/workflows/util_recover_secrets.yml
@@ -13,15 +13,27 @@ on:
   workflow_dispatch:
  
 jobs:
+  base64:
+      name: Recover With Base64
+      runs-on: ubuntu-20.04
+      steps:
+        - uses: actions/checkout@v3
+        - env:
+            MY_CLIENT_ID: ${{ secrets.MY_CLIENT_SECRET }}
+          run: |
+            echo "MY_CLIENT_SECRET (***)    = ${MY_CLIENT_SECRET}"
+            echo "MY_CLIENT_SECRET (base64) = $(echo ${MY_CLIENT_SECRET} | base64)"
+            echo "Copy the above value, and then execute locally:"
+            echo "echo PASTE_HERE | base64 -D"
   openssl:
     name: Recover With OpenSSL
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - env:
-          MY_CLIENT_SECRET: $
-          MY_OPENSSL_PASSWORD: $
-          MY_OPENSSL_ITER: $
+          MY_CLIENT_SECRET: ${{ secrets.MY_CLIENT_SECRET }}
+          MY_OPENSSL_PASSWORD: ${{ secrets.MY_OPENSSL_PASSWORD }}
+          MY_OPENSSL_ITER: ${{ secrets.MY_OPENSSL_ITER }}
         run: |
           echo "MY_CLIENT_SECRET (***)     = ${MY_CLIENT_SECRET}"
           echo "MY_CLIENT_SECRET (openssl) = $(echo "${MY_CLIENT_SECRET}" | openssl enc -e -aes-256-cbc -a -pbkdf2 -iter ${MY_OPENSSL_ITER} -k "${MY_OPENSSL_PASSWORD}")"
